--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ UserInterfaceState.xcuserstate
 $RECYCLE.BIN/
 
 *.log
+*.keystore
 log.txt
 npm-debug.log*
 
@@ -30,3 +31,4 @@ npm-debug.log*
 /platforms
 /plugins
 /www
+/apps
